--- a/app/src/main/res/layout/fragment_changepassword.xml
+++ b/app/src/main/res/layout/fragment_changepassword.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:padding="@dimen/textsize_small2"
         android:orientation="vertical">
 
 
@@ -23,10 +24,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="@dimen/textsize_medium"
                 android:layout_marginEnd="5dp"
                 android:layout_marginRight="10dp"
                 android:text="@string/current_password"
+                android:textSize="@dimen/textsize_small2"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:textColor="@color/black" />
 
@@ -65,6 +67,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginRight="10dp"
                 android:text="@string/new_password"
+                android:textSize="@dimen/textsize_small2"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:textColor="@color/black" />
 
@@ -103,6 +106,7 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginRight="10dp"
                 android:text="@string/confirm_password"
+                android:textSize="@dimen/textsize_small2"
                 android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:textColor="@color/black" />
 
@@ -128,7 +132,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="@dimen/textsize_medium"
                 android:layout_marginEnd="5dp"
                 android:layout_marginRight="10dp"
                 android:backgroundTint="@color/dark_brown"
