--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -14,7 +14,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="15dp"
+        android:padding="@dimen/textsize_small"
         android:fitsSystemWindows="true"
         android:orientation="vertical">
 
@@ -37,7 +37,8 @@
             android:text="@string/user_name"
             android:textColor="@color/black"
             android:textSize="16dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:id="@+id/username"/>
 
         <com.smarteist.autoimageslider.SliderView
             android:id="@+id/slider"
@@ -45,6 +46,8 @@
             android:layout_height="250dp"
             app:sliderIndicatorGravity="center_horizontal|bottom"
             app:sliderIndicatorMargin="15dp"
+            android:layout_margin="5dp"
+
             app:sliderIndicatorOrientation="horizontal"
             app:sliderIndicatorPadding="3dp"
             app:sliderIndicatorRadius="2dp"
@@ -88,6 +91,7 @@
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
             android:background="@color/brown"
             android:orientation="horizontal">
 
@@ -119,6 +123,7 @@
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
             android:background="@color/brown"
             android:orientation="horizontal">
 
@@ -150,6 +155,7 @@
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
             android:layout_margin="5dp"
+            android:layout_marginTop="5dp"
             android:background="@color/brown"
             android:orientation="horizontal">
 
