--- a/app/src/main/res/layout/orderlist.xml
+++ b/app/src/main/res/layout/orderlist.xml
@@ -7,7 +7,6 @@
         android:id="@+id/hold_parent_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="4dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -25,17 +24,7 @@
                 android:gravity="left"
                 android:text="@string/contact_name"
                 android:textColor="@color/black"
-                android:textSize="16dp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-
-            </LinearLayout>
+                android:textSize="14dp" />
 
         </LinearLayout>
 
@@ -43,58 +32,63 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
                 android:gravity="left"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
 
                 <com.thisit.southavencrm.customfonts.TextviewSourceSansProRegular
                     android:id="@+id/tran_no"
                     android:layout_width="match_parent"
-                    android:layout_marginTop="@dimen/textsize_small"
+
                     android:layout_height="wrap_content"
                     android:text="@string/tran_no"
                     android:breakStrategy="simple"
-
-                    android:textSize="16dp" />
+                    android:textSize="14dp" />
 
                 <com.thisit.southavencrm.customfonts.TextviewSourceSansProRegular
                     android:id="@+id/net_total"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/textsize_small"
+                    android:layout_marginTop="5dp"
                     android:text="@string/net_total"
 
-                    android:textSize="16dp" />
+                    android:textSize="14dp" />
             </LinearLayout>
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:orientation="vertical">
 
                 <com.thisit.southavencrm.customfonts.TextviewSourceSansProRegular
                     android:id="@+id/tran_date"
-                    android:layout_marginRight="@dimen/textsize_medium"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:gravity="center"
+                    android:gravity="center|top"
                     android:text="@string/tran_date"
-
-                    android:textSize="16dp" />
-
+                    android:textSize="14dp" />
 
             </LinearLayout>
 
 
+
+
         </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/light_gray"
+            android:layout_marginTop="5dp"/>
     </LinearLayout>
 </RelativeLayout>
 
