--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/home_gradient_login"
@@ -39,14 +40,14 @@
             android:id="@+id/login_password"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:background="@color/white"
             android:hint="@string/hint_password"
             android:inputType="textPassword"
             android:padding="10dp"
             android:singleLine="true"
             android:textColor="@color/black"
-            android:textColorHint="@color/Gray"
-            android:layout_marginTop="10dp"/>
+            android:textColorHint="@color/Gray" />
 
         <CheckBox
             android:id="@+id/remember_me"
@@ -73,22 +74,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
             android:text="@string/btn_forgotpassword"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-            android:textColor="@color/black"
-            android:layout_marginTop="10dp"/>
+            android:textColor="@color/black" />
 
         <com.thisit.southavencrm.customfonts.TextviewSourceSansProBold
             android:id="@+id/btn_register"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="10dp"
             android:gravity="center_horizontal"
             android:text="@string/btn_register"
             android:textColor="@color/black"
-            android:textSize="16dp"
-            android:layout_marginTop="10dp"/>
+            android:textSize="16dp" />
     </LinearLayout>
 
 </LinearLayout>
