--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -53,6 +53,7 @@
 
 
             <Switch
+                android:id="@+id/HasPromoNotification_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center" />
@@ -96,6 +97,7 @@
             </LinearLayout>
 
             <Switch
+                android:id="@+id/HasOrderNotification_switch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center" />
