--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent"
     tools:context=".OrderDetail.view.OrderDetailActivity">
 
@@ -16,5 +17,5 @@
         android:textSize="@dimen/textsize_medium"
         android:text="Data coming soon....!"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
-        android:textColor="@color/white" />
+        android:textColor="@color/black" />
 </RelativeLayout>
