--- a/app/src/main/res/layout/activity_e_card.xml
+++ b/app/src/main/res/layout/activity_e_card.xml
@@ -65,7 +65,7 @@
                 android:background="@android:color/transparent"
                 app:itemIconTint="@color/bottom_bar_item_selector"
                 app:itemTextColor="@color/bottom_bar_item_selector"
-                app:labelVisibilityMode="labeled"
+                app:labelVisibilityMode="unlabeled"
                 app:menu="@menu/bottom_nav_menu" />
 
         </com.google.android.material.bottomappbar.BottomAppBar>
