--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,6 +43,8 @@
             android:layout_marginTop="10dp"
             android:background="@color/white"
             android:hint="@string/hint_password"
+            app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/black"
             android:inputType="textPassword"
             android:padding="10dp"
             android:singleLine="true"
