--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -25,7 +25,7 @@
             android:layout_gravity="center"
             android:gravity="left|center"
             android:text="@string/profile_title"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textSize="20dp"
             android:textColor="@color/dark_brown"
             android:textStyle="bold|italic" />
 
