--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,4 +27,9 @@
         <item name="layout_constraintVertical_chainStyle">packed</item>
     </style>
 
+    <style name="MySpinnerLook" parent="@android:style/Widget.TextView.SpinnerItem">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+
 </resources>
