edit propfile , register, splash

--- a/app/src/main/res/layout/activity_forgotpassword.xml
+++ b/app/src/main/res/layout/activity_forgotpassword.xml
@@ -31,7 +31,7 @@
             android:layout_margin="5dp"
             android:gravity="center_horizontal"
             android:text="@string/btn_forgotpassword"
-            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
             android:textColor="@color/white" />
 
         <com.thisit.southavencrm.customfonts.TextviewSourceSansProRegular
