--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -54,10 +54,9 @@
 
                 <Spinner
                     android:id="@+id/title_spi"
-                    android:layout_width="wrap_content"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
-                    android:layout_marginEnd="@drawable/ic_baseline_arrow_drop_down_24"
                     android:background="@drawable/edittext_border_white"
                     android:padding="10dp"
                     android:textColor="@color/black"
