--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/textsize_medium">
-
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <com.thisit.southavencrm.customfonts.TextviewSourceSansProRegular
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -51,7 +57,7 @@
 
             <com.thisit.southavencrm.customfonts.TextviewSourceSansProRegular
 
-            android:layout_width="0dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="1"
@@ -153,9 +159,10 @@
                 android:src="@drawable/ic_baseline_arrow_forward_24"
                 tools:ignore="ContentDescription"
                 app:tint="@color/black" />
-
         </LinearLayout>
     </LinearLayout>
+</LinearLayout>
 
+    </ScrollView>
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</RelativeLayout>
