--- a/app/src/main/res/layout/fragment_changepassword.xml
+++ b/app/src/main/res/layout/fragment_changepassword.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -142,4 +145,5 @@
                 android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
