--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,18 +40,15 @@
                 android:layout_marginRight="10dp"
                 android:background="@drawable/bg_grayedit"
                 android:gravity="center"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:visibility="visible">
 
                 <Spinner
                     android:id="@+id/title_spi"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:padding="10dp"
-                    android:popupBackground="@color/white"
-                    android:textColor="@color/black"
-                    android:textSize="@dimen/textsize_small2" />
+                    android:layout_margin="4dp"
+                    android:padding="7dp" />
             </LinearLayout>
 
             <com.thisit.southavencrm.customfonts.TextviewSourceSansProRegular
@@ -77,7 +75,6 @@
                 android:padding="10dp"
                 android:textColor="@color/black"
                 android:textSize="@dimen/textsize_small2" />
-
 
 
             <com.thisit.southavencrm.customfonts.TextviewSourceSansProRegular
